--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,112 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 1128px;
+}
+
+.gallery-item {
+  flex: 0 0 auto;
+  width: 360px;
+  height: 200px;
+  margin-right: 24px;
+  margin-bottom: 16px;
+}
+
+.gallery-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border-radius: 16px;
+
+  transition: transform 0.3s ease;
+}
+
+.gallery-link:hover .gallery-image {
+  transform: scale(1.05);
+}
+
+.form {
+  max-width: 100%;
+  width: 480px;
+  margin: 0;
+  padding: 20px;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f5f5f5;
+}
+.email {
+  height: 72px;
+}
+.message {
+  height: 112px;
+}
+
+.feedback-form {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 8px;
+  max-width: 100%;
+  width: 360px;
+  box-sizing: border-box;
+}
+
+/* Вхідні поля */
+.feedback-form input[type='email'],
+.feedback-form textarea {
+  width: 100%;
+  height: 40px;
+  margin-top: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  padding: 2px 6px;
+  border: none;
+  border-radius: 8px;
+  box-sizing: border-box;
+  border: 2px solid #808080;
+}
+
+/* Текстове поле */
+.feedback-form textarea {
+  resize: none;
+  min-height: 80px;
+}
+
+/* Кнопка */
+.feedback-form button {
+  width: 95px;
+  height: 40px;
+  padding: 8px 16px;
+  background: rgba(78, 117, 255, 1);
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* Адаптивність */
+@media (max-width: 400px) {
+  .feedback-form {
+    width: 100%;
+  }
+
+  .feedback-form button {
+    width: 100%;
+  }
+}
